#pragma once

class Controller {
    void init();
public:
    Controller();
};
