#pragma once

// Defines general-purpose enums used across the game.
enum class Direction { NORTH, SOUTH, EAST, WEST };
enum class LinkType { VIRUS, DATA };
