#pragma once

class Game {

public:
    void startGame();
    void nextTurn();

};
